Prevent width overflows in mobile views.

--- a/source/assets/public/index.css
+++ b/source/assets/public/index.css
@@ -55,7 +55,8 @@
  */
 
 html {
-  font-size: 52.5%; 
+  font-size: 52.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -65,6 +66,8 @@ body {
   line-height: 1;
   color: var(--text-color);
   font-family: var(--font-body);
+  position: relative;
+  overflow-x: hidden;
 }
 
 *, *:after, *:before {
@@ -143,8 +146,9 @@ body {
   .nav--mobile__show {
     position: fixed;
     background-color: #FFFFFF;
-    width: 100%;
     top: 0;
+    right: 0;
+    left: 0;
     z-index: 6;
     padding: 2rem;
     font-size: 2rem;
@@ -164,7 +168,6 @@ body {
   .nav--mobile__show:hover {
     cursor: pointer;
   }
-
   .nav--mobile .nav__item {
     font-size: 2rem;
     padding: 1rem 0rem;
@@ -724,7 +727,8 @@ p.c-price-list__description {
     padding: 0;
     margin: 0;
     top: 0;
-    width: 100%;
+    right: 0;
+    left: 0;
   }
   /* the new stacking context created by the transform */
   /* was giving me grief with the mobile nav */
